--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Greendan</title>
+    <title>Greenden</title>
     <!--Tailwind Css Link-->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
@@ -160,7 +160,7 @@
 
    <!--Footer-->
    <section class="bg-green-100 p-10 mt-2 flex flex-col gap-5">
-    <h1 class="text-4xl font-bold">Greendan</h1>
+    <h1 class="text-4xl font-bold">Greenden</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro voluptatem, impedit illum id nostrum facere quod ipsam aut non natus dolorem alias nulla quidem ut. </p>
     <p>@ 2025 Greendan.com</p>
    </section>
