--- a/product.html
+++ b/product.html
@@ -12,7 +12,7 @@
 <body>
     <!--Responsive Novbar-->
     <nav class="bg-green-100 p-3 flex items-center justify-between shadow-xl sticky top-0 z-10">
-        <h1 class="text-2xl">Greendan</h1>
+        <h1 class="text-2xl">Greenden</h1>
 
         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 md:hidden" viewBox="0 0 20 20" fill="currentColor">
             <path fill-rule="evenodd"
@@ -104,7 +104,7 @@
 
        <!--Footer-->
    <section class="bg-green-100 p-10 mt-2 flex flex-col gap-5">
-    <h1 class="text-4xl font-bold">Greendan</h1>
+    <h1 class="text-4xl font-bold">Greenden</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro voluptatem, impedit illum id nostrum facere quod ipsam aut non natus dolorem alias nulla quidem ut. </p>
     <p>@ 2025 Greendan.com</p>
    </section>
